.Helm3/templates/vcoins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcoins-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vcoins.ajs-engineer.com  # Custom domain for local access
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vcoins-service  # The service you've already set up
                port:
                  number: 80
